# helix

./: .gitignore  CAPABILITIES_STATUS.md  Cargo.toml  DASHBOARD_STATUS.md  GPU_STATUS.md  IMPLEMENTATION_STATUS.md  README.md  UI_STATUS.md  index.html  robots.txt  sitemap.xml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/helix-bioage/: Cargo.toml
crates/helix-bioage/examples/: nhanes_refranges.rs  nhanes_validate.rs
crates/helix-bioage/src/: lib.rs
crates/helix-cohort/: Cargo.toml
crates/helix-cohort/src/: lib.rs
crates/helix-connect/: Cargo.toml
crates/helix-connect/src/: lib.rs
crates/helix-core/: Cargo.toml
crates/helix-core/src/: lib.rs
crates/helix-core/tests/: pipeline.rs
crates/helix-demo/: Cargo.toml
crates/helix-demo/examples/: generate.rs
crates/helix-demo/src/: lib.rs
crates/helix-demo/tests/: fixture.rs
crates/helix-embed/: Cargo.toml
crates/helix-embed/src/: lib.rs
crates/helix-embed/tests/: gpu_embed.rs
crates/helix-escalation/: Cargo.toml
crates/helix-escalation/src/: lib.rs
crates/helix-evidence/: Cargo.toml
crates/helix-evidence/src/: lib.rs
crates/helix-evolve/: Cargo.toml
crates/helix-evolve/examples/: evolve_demo.rs  evolve_full.rs  mimic_eval.rs
crates/helix-evolve/src/: lib.rs
crates/helix-fed/: Cargo.toml
crates/helix-fed/src/: lib.rs
crates/helix-focus/: Cargo.toml
crates/helix-focus/src/: lib.rs
crates/helix-genome/: Cargo.toml
crates/helix-genome/src/: lib.rs
crates/helix-ingest/: Cargo.toml
crates/helix-ingest/src/: dossier.rs  lib.rs  main.rs  parse.rs  vault.rs
crates/helix-ingest/src/serve/: api.rs  connectors.rs  hae.rs  mod.rs
crates/helix-ingest/tests/: ingest.rs  serve.rs
crates/helix-llm/: Cargo.toml
crates/helix-llm/src/: lib.rs
crates/helix-llm/tests/: gpu_ollama.rs
crates/helix-neural/: Cargo.toml
crates/helix-neural/src/: lib.rs
crates/helix-numeric/: Cargo.toml
crates/helix-numeric/benches/: engine.rs
crates/helix-numeric/src/: lib.rs
crates/helix-numeric/tests/: properties.rs
crates/helix-ocr/: Cargo.toml
crates/helix-ocr/src/: lib.rs
crates/helix-ontology/: Cargo.toml
crates/helix-ontology/src/: lib.rs
crates/helix-ontology/tests/: properties.rs
crates/helix-pipeline/: Cargo.toml
crates/helix-pipeline/src/: lib.rs
crates/helix-pipeline/tests/: pipeline.rs
crates/helix-provenance/: Cargo.toml
crates/helix-provenance/src/: lib.rs
crates/helix-refranges/: Cargo.toml
crates/helix-refranges/src/: lib.rs
crates/helix-retrieval/: Cargo.toml
crates/helix-retrieval/src/: lib.rs
crates/helix-score/: Cargo.toml
crates/helix-score/src/: lib.rs
crates/helix-sensing/: Cargo.toml
crates/helix-sensing/src/: lib.rs
crates/helix-timeline/: Cargo.toml
crates/helix-timeline/src/: lib.rs
crates/helix-vault/: Cargo.toml
crates/helix-vault/src/: credentials.rs  lib.rs  persist.rs
crates/helix-vault/tests/: credentials.rs  persistence.rs  properties.rs
crates/helix-verifier/: Cargo.toml
crates/helix-verifier/src/: lib.rs
crates/helix-vision/: Cargo.toml
crates/helix-vision/src/: lib.rs
crates/helix-vision/tests/: gpu_vision.rs
crates/helix-visual/: Cargo.toml
crates/helix-visual/benches/: visual.rs
crates/helix-visual/src/: lib.rs
crates/helix-wasm/: Cargo.toml
crates/helix-wasm/src/: lib.rs
docs/: COVERAGE.md  Helix-Build-Spec.md  Helix-PHI-ADR-Product-Spec.md
docs/adr/: ADR-001-user-owned-local-first-vault.md  ADR-002-ruflo-orchestration-meta-harness.md  ADR-003-ruvector-health-knowledge-graph.md  ADR-004-canonical-ontology-normalization.md  ADR-005-retrieval-grounded-provenance-answering.md  ADR-006-evidence-tiering-abstention.md  ADR-007-deterministic-numeric-trend-engine.md  ADR-008-verifier-critic-swarm-consensus.md  ADR-009-red-flag-escalation-clinician-in-loop.md  ADR-010-wellness-vs-samd-boundary.md  ADR-011-federation-pii-stripped-cohort.md  ADR-012-connector-abstraction-graceful-degradation.md  ADR-013-on-device-inference.md  ADR-014-ambient-sensing-cognitum-seed.md  ADR-015-visual-3d-digital-twin.md  ADR-016-composite-health-score.md  ADR-017-mint-branded-harness-metaharness.md  ADR-018-darwin-mode-faithfulness-fitness.md  ADR-019-cost-aware-model-routing.md  ADR-020-wifi-csi-ambient-sensing.md  ADR-021-genome-ingestion-rvdna.md  ADR-022-ocr-lab-ingestion.md  ADR-023-semantic-retrieval.md  ADR-024-privacy-preserving-cohort.md  ADR-025-visual-rag-medical-documents.md  ADR-026-on-device-llm-analyst.md  ADR-027-learned-text-embeddings.md  ADR-028-learned-visual-encoder.md  ADR-029-connector-clients.md  ADR-030-federation-transport.md  ADR-031-longitudinal-health-score-timeline.md  ADR-032-evidence-based-focus-areas.md  ADR-033-dashboard-updates-recommendations.md  ADR-034-biological-age-estimate.md  ADR-035-darwin-parameter-evolution.md  ADR-036-scale-invariant-trend-band.md  ADR-045-encrypted-credential-vault-zero-knowledge.md  ADR-046-agentic-browser-data-acquisition.md  ADR-047-single-tenant-local-first-topology.md  ADR-048-aimds-guardrails-pull-analyst-surface.md  (+10 more)
docs/design/mockups/: README.md  direction-a-clinical-aurora.html  direction-b-bio-instrument.html  direction-c-living-twin.html  direction-final-hybrid.html
docs/ui/: README.md
mobile/: index.html  manifest.webmanifest  mobile.css  mobile.js  sw.js
ui/: app.css  app.js  demo-dossier.json  hybrid.css  hybrid.html  hybrid.js  index.html  onboarding.js  sitemap.xml
ui/pkg/: helix.d.ts  helix.js  helix_bg.wasm  helix_bg.wasm.d.ts  package.json
