[workspace]
resolver = "2"
members = [
    "crates/helix-provenance",
    "crates/helix-numeric",
    "crates/helix-evidence",
    "crates/helix-escalation",
    "crates/helix-core",
    "crates/helix-ontology",
    "crates/helix-verifier",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["ISO Vision LLC"]
repository = "https://github.com/ruvnet/helix"
rust-version = "1.80"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
criterion = { version = "0.5", default-features = false }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
