[workspace]
resolver = "2"
members = [
    "crates/helix-provenance",
    "crates/helix-numeric",
    "crates/helix-evidence",
    "crates/helix-escalation",
    "crates/helix-core",
    "crates/helix-ontology",
    "crates/helix-verifier",
    "crates/helix-vault",
    "crates/helix-score",
    "crates/helix-neural",
    "crates/helix-sensing",
    "crates/helix-genome",
    "crates/helix-ocr",
    "crates/helix-retrieval",
    "crates/helix-cohort",
    "crates/helix-visual",
    "crates/helix-llm",
    "crates/helix-embed",
    "crates/helix-vision",
    "crates/helix-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["ISO Vision LLC"]
repository = "https://github.com/ruvnet/helix"
rust-version = "1.80"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
criterion = { version = "0.5", default-features = false }
proptest = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
