[package]
name = "helix-bioage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ADR-034: deterministic biological-age estimate (Levine PhenoAge) from routine labs — non-diagnostic"

[dependencies]
serde.workspace = true
thiserror.workspace = true
helix-provenance = { path = "../helix-provenance", version = "0.1.0" }

[dev-dependencies]
serde_json.workspace = true
