[package]
name = "helix-cohort"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ADR-024: privacy-preserving cohort feature extraction (federation primitive) — generalization + cell-suppression + differential privacy"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
