[package]
name = "helix-connect"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ADR-029: live connector clients (FHIR/SMART + wearables) — transport-trait core with FHIR->ProvRecord parsing and the degradation ladder"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
helix-provenance = { path = "../helix-provenance", version = "0.1.0" }

[dev-dependencies]
proptest.workspace = true
