[package]
name = "helix-demo"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Synthetic, fictional demo dossier (the 'Alex Rivera' persona) that seeds the Helix UI/mobile demo across all six data domains. SAMPLE DATA — not a real person."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
helix-provenance = { path = "../helix-provenance", version = "0.1.2" }
helix-pipeline = { path = "../helix-pipeline", version = "0.1.2" }
helix-escalation = { path = "../helix-escalation", version = "0.1.2" }
helix-focus = { path = "../helix-focus", version = "0.1.2" }
helix-score = { path = "../helix-score", version = "0.1.2" }
helix-bioage = { path = "../helix-bioage", version = "0.1.2" }
helix-timeline = { path = "../helix-timeline", version = "0.1.2" }
helix-numeric = { path = "../helix-numeric", version = "0.1.2" }
