[package]
name = "helix-focus"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ADR-032: deterministic, non-diagnostic 'focus areas' selection from the user's own records"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
helix-provenance = { path = "../helix-provenance", version = "0.1.0" }
helix-numeric = { path = "../helix-numeric", version = "0.1.0" }

[dev-dependencies]
proptest.workspace = true
