[package]
name = "helix-genome"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ADR-021: user-owned genome ingestion & pharmacogenomics (rvDNA backend) -> Helix ProvRecords + prescriber advisories"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
helix-provenance = { path = "../helix-provenance", version = "0.1.0" }

[dev-dependencies]
proptest.workspace = true
