[package]
name = "helix-ocr"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ADR-022: OCR lab-document ingestion (RuVector OCR backend) -> gated, conservative-confidence ProvRecords"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
helix-provenance = { path = "../helix-provenance" }

[dev-dependencies]
proptest.workspace = true
