[package]
name = "helix-refranges"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "NHANES-derived population reference intervals — a labeled FALLBACK when a lab supplies no reference range"

[dependencies]
helix-provenance = { path = "../helix-provenance", version = "0.1.0" }
