[package]
name = "helix-retrieval"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ADR-023: semantic retrieval contract over the health graph (RuVector HNSW/GraphRAG backend)"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
helix-provenance = { path = "../helix-provenance" }

[dev-dependencies]
proptest.workspace = true
