[package]
name = "helix-timeline"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ADR-031: longitudinal health-score timeline — deterministic, methodology-versioned, trend-first"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
helix-numeric = { path = "../helix-numeric", version = "0.1.0" }
helix-score = { path = "../helix-score", version = "0.1.0" }

[dev-dependencies]
serde_json.workspace = true
