[package]
name = "helix-vision"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ADR-028: learned visual encoder (local GPU) — layout-only vision captioning + MiniLM embedding for helix-visual"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ureq = "2"
helix-embed = { path = "../helix-embed" }
