[package]
name = "helix-visual"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ADR-025: visual RAG over medical documents/images (rupixel backend) — tile embeddings + MaxSim late interaction"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
image = { version = "0.25", default-features = false, features = ["png"] }

[[bench]]
name = "visual"
harness = false
